--- a/templates/GetEmpOutput.html
+++ b/templates/GetEmpOutput.html
@@ -14,13 +14,13 @@
 
 				<div>
 
-			  		Employee ID:<br> {{ id }} <br><br>
+			  		Employee ID:<br> {{ emp_id }} <br><br>
 
-			  		First Name:<br> {{ fname }} <br><br>
+			  		First Name:<br> {{ first_name }} <br><br>
 
-			  		Last Name:<br> {{ lname }} <br><br>
+			  		Last Name:<br> {{ last_name }} <br><br>
 
-			  		Primary Interest:<br> {{ interest }} <br><br>
+			  		Primary Interest:<br> {{ pri_skill }} <br><br>
 
 			  		Location:<br> {{ location }} <br><br>
 
