--- a/templates/EmployeeInfo.html
+++ b/templates/EmployeeInfo.html
@@ -10,6 +10,6 @@
     <p>Last Name: {{ last_name }}</p>
     <p>Primary Skill: {{ pri_skill }}</p>
     <p>Location: {{ location }}</p>
-    <p>Image URL: {{ image_url }}</p>
+    <img src="{{ image_url }}" alt="Employee Image">
 </body>
 </html>
