--- a/templates/GetEmp.html
+++ b/templates/GetEmp.html
@@ -1,7 +1,7 @@
-	<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Get Employee Information</title>
+	<title>Employee Information</title>
 </head>
 <center>
 	<font color="black" size="5" style="font-family: avenir">
@@ -10,20 +10,30 @@
 
 		<body bgcolor="lightgrey">
 
-			<form action="/getemp" autocomplete="on" method="POST">
+			<form>
 
-				<h2 style="color: grey">Enter Employee ID</h2>
+				<div>
 
-		  		Employee ID:<br> <input style="height:25px;font-size:14pt;" type="number" name="emp_id" autofocus size="40"><br><br>
+			  		Employee ID:<br> {{ emp_id }} <br><br>
 
+			  		First Name:<br> {{ first_name }} <br><br>
 
-		  		<button type="submit" style="background: grey; height: 45px; width: 200px; color: white; size: 5; font:oblique;">FETCH INFO</button><br><br>
+			  		Last Name:<br> {{ last_name }} <br><br>
 
-		  		<button type="submit" formaction="http://44.202.3.14:80/" style="background: white	; height: 45px; width: 200px; color: black; size: 5; font:oblique;" method="GET">GO TO UPDATE DATABASE PAGE</button>
+			  		Primary Interest:<br> {{ pri_skill }} <br><br>
+
+			  		Location:<br> {{ location }} <br><br>
+
+			  		Image URL: <br> {{ image_url }} <br><br>
+
+			  		<button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;" formaction="http://44.202.3.14:80/getemp">RESET</button><br><br>
+
+			  	</div>
 
 			</form>
 
 		</body>
+
 	</font>
 </center>
 </html>
