--- a/templates/AddEmp.html
+++ b/templates/AddEmp.html
@@ -23,9 +23,9 @@
 
 				Last Name:<br> <input style="height:25px;font-size:14pt;color:grey;" type="text" name="last_name" required><br><br>
 
-				Primary Skills:<br> <input style="height:25px;font-size:14pt;color:grey;" type="text" name="pri_skill" required><br><br>
+				Primary Skills:<br> <input style="height:25px;font-size:14pt;color:grey;" type="text" name="pri_skill"><br><br>
 
-				Location:<br> <input style="height:25px;font-size:14pt;color:grey;" type="text" name="location" required><br><br>
+				Location:<br> <input style="height:25px;font-size:14pt;color:grey;" type="text" name="location"><br><br>
 
 				Image: <input type="file" name="emp_image_file" style="height:25px;font-size:14pt;color:grey;"><br><br>
 
