--- a/templates/AddEmp.html
+++ b/templates/AddEmp.html
@@ -19,9 +19,9 @@
 
 				Employee ID:<br> <input style="height:25px;font-size:14pt; color:grey;" type="number" name="emp_id" autofocus size="40" required><br><br>
 
-				First Name:<br> <input style="height:25px;font-size:14pt;color:grey;" type="text" name="first_name" required><br><br>
+				First Name:<br> <input style="height:25px;font-size:14pt;color:grey;" type="text" name="first_name"><br><br>
 
-				Last Name:<br> <input style="height:25px;font-size:14pt;color:grey;" type="text" name="last_name" required><br><br>
+				Last Name:<br> <input style="height:25px;font-size:14pt;color:grey;" type="text" name="last_name"><br><br>
 
 				Primary Skills:<br> <input style="height:25px;font-size:14pt;color:grey;" type="text" name="pri_skill"><br><br>
 
