--- a/templates/GetEmp.html
+++ b/templates/GetEmp.html
@@ -27,6 +27,7 @@
 			  		Image URL: <br> {{ image_url }} <br><br>
 
 			  		<button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;" formaction="http://44.202.3.14:80/getemp">RESET</button><br><br>
+					<button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;" formaction="/deleteemp/{{ emp_id }}">Delete</button><br><br>
 
 			  	</div>
 
