--- a/templates/ConfirmUpdateEmp.html
+++ b/templates/ConfirmUpdateEmp.html
@@ -1,86 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Confirm Update Employee</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: lightgrey;
-            margin: 0;
-            padding: 20px;
-        }
-
-        h1 {
-            color: DodgerBlue;
-            text-align: center;
-            margin-top: 0;
-        }
-
-        form {
-            width: 400px;
-            margin: 0 auto;
-            background-color: #fff;
-            border-radius: 5px;
-            padding: 20px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        label {
-            display: block;
-            margin-bottom: 5px;
-        }
-
-        input[type="text"] {
-            width: 100%;
-            padding: 8px;
-            border: 1px solid lightgrey;
-            border-radius: 4px;
-            margin-bottom: 10px;
-        }
-
-        button[type="submit"],
-        button[type="cancel"] {
-            background-color: grey;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 4px;
-            cursor: pointer;
-            width: 45%;
-            margin-right: 5px;
-        }
-
-        button[type="submit"]:hover,
-        button[type="cancel"]:hover {
-            background-color: darkgrey;
-        }
-    </style>
+	<title>Confirm Update Employee</title>
 </head>
-<body>
-    <h1>Confirm Update Employee</h1>
+<center>
+	<font color="black" size="4" style="font-family: avenir">
 
-    <form method="POST" action="{{ url_for('update_emp', emp_id=emp_id) }}">
-        <label for="first_name">First Name:</label>
-        <input type="text" id="first_name" name="first_name" value="{{ first_name }}" required><br><br>
-        
-        <label for="last_name">Last Name:</label>
-        <input type="text" id="last_name" name="last_name" value="{{ last_name }}" required><br><br>
-        
-        <label for="pri_skill">Primary Skill:</label>
-        <input type="text" id="pri_skill" name="pri_skill" value="{{ pri_skill }}" required><br><br>
-        
-        <label for="location">Location:</label>
-        <input type="text" id="location" name="location" value="{{ location }}" required><br><br>
-        
-        <button type="submit">Update</button>
-        <button type="button" onclick="cancelUpdate()">Cancel</button>
-    </form>
+		<h1 style="color: DodgerBlue">Confirm Update Employee</h1>
 
-    <script>
-        function cancelUpdate() {
-            // Redirect to the employee information page without making any changes
-            window.location.href = "{{ url_for('get_emp_output', emp_id=emp_id) }}";
-        }
-    </script>
-</body>
+		<body bgcolor="lightgrey">
+
+			<form action="/confirmupdateemp/{{ emp_id }}" method="POST">
+				{% if error %}
+					<p class="error">{{ error }}</p>
+				{% endif %}
+
+				Employee ID:<br>
+				<input style="height: 25px; font-size: 14pt; color: grey;" type="number" name="emp_id" value="{{ emp_id }}" readonly><br><br>
+
+				First Name:<br>
+				<input style="height: 25px; font-size: 14pt; color: grey;" type="text" name="first_name" value="{{ first_name }}" required><br><br>
+
+				Last Name:<br>
+				<input style="height: 25px; font-size: 14pt; color: grey;" type="text" name="last_name" value="{{ last_name }}" required><br><br>
+
+				Primary Skills:<br>
+				<input style="height: 25px; font-size: 14pt; color: grey;" type="text" name="pri_skill" value="{{ pri_skill }}" required><br><br>
+
+				Location:<br>
+				<input style="height: 25px; font-size: 14pt; color: grey;" type="text" name="location" value="{{ location }}" required><br><br>
+
+				<input type="submit" value="Confirm Update">
+				<input type="button" value="Cancel" onclick="location.href='/getempoutput/{{ emp_id }}'">
+			</form>
+		</body>
+	</font>
+</center>
 </html>
