--- a/templates/UpdateEmp.html
+++ b/templates/UpdateEmp.html
@@ -2,61 +2,10 @@
 <html>
 <head>
     <title>Update Employee</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: lightgrey;
-            margin: 0;
-            padding: 20px;
-        }
-
-        h1 {
-            color: DodgerBlue;
-            text-align: center;
-            margin-top: 0;
-        }
-
-        form {
-            width: 400px;
-            margin: 0 auto;
-            background-color: #fff;
-            border-radius: 5px;
-            padding: 20px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        label {
-            display: block;
-            margin-bottom: 5px;
-        }
-
-        input[type="text"] {
-            width: 100%;
-            padding: 8px;
-            border: 1px solid lightgrey;
-            border-radius: 4px;
-            margin-bottom: 10px;
-        }
-
-        button[type="submit"] {
-            background-color: grey;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 4px;
-            cursor: pointer;
-            width: 100%;
-        }
-
-        button[type="submit"]:hover {
-            background-color: darkgrey;
-        }
-    </style>
 </head>
 <body>
     <h1>Update Employee</h1>
-
-    <form method="POST" action="{{ url_for('update_emp', emp_id=emp_id) }}">
+    <form action="/updateemp/{{ emp_id }}" method="POST">
         <label for="first_name">First Name:</label>
         <input type="text" id="first_name" name="first_name" value="{{ first_name }}" required><br><br>
         
@@ -69,7 +18,7 @@
         <label for="location">Location:</label>
         <input type="text" id="location" name="location" value="{{ location }}" required><br><br>
         
-        <button type="submit">Update</button>
+        <input type="submit" value="Update Employee">
     </form>
 </body>
 </html>
