--- a/templates/GetEmp.html
+++ b/templates/GetEmp.html
@@ -1,40 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Employee Information</title>
+    <title>Employee Information</title>
 </head>
 <center>
-	<font color="black" size="5" style="font-family: avenir">
+    <font color="black" size="5" style="font-family: avenir">
+        <h1 style="color: DodgerBlue">Employee Information</h1>
+        <body bgcolor="lightgrey">
+            <form method="POST" action="{{ url_for('update_emp', emp_id=emp_id) }}">
+                <div>
+                    Employee ID:<br>
+                    <input type="text" id="emp_id" name="emp_id" value="{{ emp_id }}" readonly><br><br>
 
-		<h1 style="color: DodgerBlue">Employee Information</h1>
+                    First Name:<br>
+                    <input type="text" id="first_name" name="first_name" value="{{ first_name }}"><br><br>
 
-		<body bgcolor="lightgrey">
+                    Last Name:<br>
+                    <input type="text" id="last_name" name="last_name" value="{{ last_name }}"><br><br>
 
-			<form>
+                    Primary Interest:<br>
+                    <input type="text" id="pri_skill" name="pri_skill" value="{{ pri_skill }}"><br><br>
 
-				<div>
+                    Location:<br>
+                    <input type="text" id="location" name="location" value="{{ location }}"><br><br>
 
-			  		Employee ID:<br> {{ emp_id }} <br><br>
+                    Image URL:<br>
+                    <input type="text" id="image_url" name="image_url" value="{{ image_url }}"><br><br>
 
-			  		First Name:<br> {{ first_name }} <br><br>
-
-			  		Last Name:<br> {{ last_name }} <br><br>
-
-			  		Primary Interest:<br> {{ pri_skill }} <br><br>
-
-			  		Location:<br> {{ location }} <br><br>
-
-			  		Image URL: <br> {{ image_url }} <br><br>
-
-			  		
-					<button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;" formaction="{{ url_for('delete_emp_form', emp_id=emp_id) }}">DELETE</button><br><br>
-
-			  	</div>
-
-			</form>
-
-		</body>
-
-	</font>
+                    <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">Update</button><br><br>
+                </div>
+            </form>
+            <form method="POST" action="{{ url_for('delete_emp_form', emp_id=emp_id) }}">
+                <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">Delete</button>
+            </form>
+        </body>
+    </font>
 </center>
 </html>
