--- a/templates/GetEmp.html
+++ b/templates/GetEmp.html
@@ -33,6 +33,10 @@
             <form method="POST" action="{{ url_for('delete_emp_form', emp_id=emp_id) }}">
                 <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">Delete</button>
             </form>
+
+            {% if success_message %}
+                <p>{{ success_message }}</p>
+            {% endif %}
         </body>
     </font>
 </center>
