--- a/templates/GetEmp.html
+++ b/templates/GetEmp.html
@@ -13,7 +13,7 @@
                     <input type="text" id="emp_id" name="emp_id" value="{{ emp_id }}" readonly><br><br>
 
                     First Name:<br>
-                    <input type="text" id="first_name" name="first_name" value="{{ first_name }}"><br><br>
+                    <input style="height:25px;font-size:14pt;color:grey;" type="text" id="first_name" name="first_name" value="{{ first_name }}"><br><br>
 
                     Last Name:<br>
                     <input type="text" id="last_name" name="last_name" value="{{ last_name }}"><br><br>
@@ -27,11 +27,11 @@
                     Image URL:<br>
                     <input type="text" id="image_url" name="image_url" value="{{ image_url }}"><br><br>
 
-                    <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">Update</button><br><br>
+                    <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">UPDATE</button><br><br>
                 </div>
             </form>
             <form method="POST" action="{{ url_for('delete_emp_form', emp_id=emp_id) }}">
-                <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">Delete</button>
+                <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">DELETE</button>
             </form>
 
             {% with messages = get_flashed_messages() %}
