--- a/templates/UpdateEmp.html
+++ b/templates/UpdateEmp.html
@@ -21,6 +21,7 @@
         <input type="submit" value="Update Employee">
     </form>
 
+<script>/*
     {% if success_message %}
         <p>{{ success_message }}</p>
         <p>Updated Information:</p>
@@ -33,5 +34,6 @@
     {% if error_message %}
         <p>{{ error_message }}</p>
     {% endif %}
+*/</script>
 </body>
 </html>
