--- a/templates/ConfirmUpdateEmp.html
+++ b/templates/ConfirmUpdateEmp.html
@@ -1,43 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Confirm Update Employee</title>
+    <title>Update Success</title>
 </head>
-<center>
-    <font color="black" size="5" style="font-family: avenir">
-
-        <h1 style="color: DodgerBlue">Confirm Update Employee</h1>
-
-        <body bgcolor="lightgrey">
-
-            <form method="POST" action="{{ url_for('confirm_update_emp', emp_id=emp_id) }}">
-                <div>
-                    Employee ID:<br>
-                    <input type="text" name="emp_id" value="{{ emp_id }}" readonly><br><br>
-
-                    First Name:<br>
-                    <input type="text" name="first_name" value="{{ first_name }}"><br><br>
-
-                    Last Name:<br>
-                    <input type="text" name="last_name" value="{{ last_name }}"><br><br>
-
-                    Primary Interest:<br>
-                    <input type="text" name="pri_skill" value="{{ pri_skill }}"><br><br>
-
-                    Location:<br>
-                    <input type="text" name="location" value="{{ location }}"><br><br>
-
-                    <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">Confirm</button>
-                </div>
-            </form>
-
-            <br>
-
-            <form>
-                <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;" onclick="window.location.href='{{ url_for('get_emp_output', emp_id=emp_id) }}'">Cancel</button>
-            </form>
-
-        </body>
-    </font>
-</center>
+<body>
+    <h1>Employee Information has been Updated!</h1>
+    <p>Click <a href="{{ url_for('employee_form') }}">here</a> to go back.</p>
+</body>
 </html>
