--- a/templates/ConfirmUpdateEmp.html
+++ b/templates/ConfirmUpdateEmp.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Employee Information has been Updated!</h1>
-    <p>Click <a href="{{ url_for('employee_form') }}">here</a> to go back.</p>
+    <p>Click <a href="{{ "http://44.202.3.14/" }}">here</a> to go back.</p>
 </body>
 </html>
