--- a/templates/GetEmp.html
+++ b/templates/GetEmp.html
@@ -33,7 +33,11 @@
             <form method="POST" action="{{ url_for('delete_emp_form', emp_id=emp_id) }}">
                 <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">DELETE</button>
             </form>
+            <form method="GET" action="http://44.202.3.14/">
+                <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">BACK</button>
+            </form>
 
+        <script>/*  
             {% with messages = get_flashed_messages() %}
                 {% if messages %}
                     {% for message in messages %}
@@ -41,6 +45,7 @@
                     {% endfor %}
                 {% endif %}
             {% endwith %}
+        */</script>
         </body>
     </font>
 </center>
