--- a/templates/GetEmp.html
+++ b/templates/GetEmp.html
@@ -31,7 +31,7 @@
                 </div>
             </form>
             <form method="POST" action="{{ url_for('delete_emp_form', emp_id=emp_id) }}">
-                <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">DELETE</button>
+                <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">DELETE</button><br><br>
             </form>
             <form method="GET" action="http://44.202.3.14/">
                 <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">BACK</button>
