--- a/templates/GetEmp.html
+++ b/templates/GetEmp.html
@@ -7,37 +7,38 @@
     <font color="black" size="5" style="font-family: avenir">
         <h1 style="color: DodgerBlue">Employee Information</h1>
         <body bgcolor="lightgrey">
-            <form method="POST" action="{{ url_for('update_emp', emp_id=emp_id) }}">
-                <div>
-                    Employee ID:<br>
-                    <input style="height:25px;font-size:14pt;color:grey;" type="text" id="emp_id" name="emp_id" value="{{ emp_id }}" readonly><br><br>
+            {% if employee %}
+                <form method="POST" action="{{ url_for('update_emp', emp_id=emp_id) }}">
+                    <div>
+                        Employee ID:<br>
+                        <input style="height:25px;font-size:14pt;color:grey;" type="text" id="emp_id" name="emp_id" value="{{ emp_id }}" readonly><br><br>
 
-                    First Name:<br>
-                    <input style="height:25px;font-size:14pt;color:grey;" type="text" id="first_name" name="first_name" value="{{ first_name }}"><br><br>
+                        First Name:<br>
+                        <input style="height:25px;font-size:14pt;color:grey;" type="text" id="first_name" name="first_name" value="{{ first_name }}"><br><br>
 
-                    Last Name:<br>
-                    <input style="height:25px;font-size:14pt;color:grey;" type="text" id="last_name" name="last_name" value="{{ last_name }}"><br><br>
+                        Last Name:<br>
+                        <input style="height:25px;font-size:14pt;color:grey;" type="text" id="last_name" name="last_name" value="{{ last_name }}"><br><br>
 
-                    Primary Interest:<br>
-                    <input style="height:25px;font-size:14pt;color:grey;" type="text" id="pri_skill" name="pri_skill" value="{{ pri_skill }}"><br><br>
+                        Primary Interest:<br>
+                        <input style="height:25px;font-size:14pt;color:grey;" type="text" id="pri_skill" name="pri_skill" value="{{ pri_skill }}"><br><br>
 
-                    Location:<br>
-                    <input style="height:25px;font-size:14pt;color:grey;" type="text" id="location" name="location" value="{{ location }}"><br><br>
+                        Location:<br>
+                        <input style="height:25px;font-size:14pt;color:grey;" type="text" id="location" name="location" value="{{ location }}"><br><br>
 
-                    Image URL:<br>
-                    <input style="height:25px;font-size:14pt;color:grey;" type="text" id="image_url" name="image_url" value="{{ image_url }}"><br><br>
+                        Image URL:<br>
+                        <input style="height:25px;font-size:14pt;color:grey;" type="text" id="image_url" name="image_url" value="{{ image_url }}"><br><br>
 
-                    <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">UPDATE</button><br><br>
-                </div>
-            </form>
-            <form method="POST" action="{{ url_for('delete_emp_form', emp_id=emp_id) }}">
-                <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">DELETE</button><br><br>
-            </form>
-            <form method="GET" action="http://44.202.3.14/">
-                <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">BACK</button>
-            </form>
+                        <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">UPDATE</button><br><br>
+                    </div>
+                </form>
+                <form method="POST" action="{{ url_for('delete_emp_form', emp_id=emp_id) }}">
+                    <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">DELETE</button><br><br>
+                </form>
+            {% else %}
+                <p>Employee not found</p>
+                <a href="http://44.202.3.14/">Go Back</a>
+            {% endif %}
 
-        
         </body>
     </font>
 </center>
