--- a/templates/EmployeeNotFound.html
+++ b/templates/EmployeeNotFound.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Employee not found</h1>
-    <a href="http://44.202.3.14/">Go Back</a>
+    <p>Click <a href="http://44.202.3.14/">here</a> to return to the home page.</p>
 </body>
 </html>
