--- a/templates/EmployeeNotFound.html
+++ b/templates/EmployeeNotFound.html
@@ -2,6 +2,27 @@
 <html>
 <head>
     <title>Employee Not Found</title>
+    <style>
+        body {
+            background-color: lightgrey;
+            text-align: center;
+            font-family: avenir;
+        }
+
+        h1 {
+            color: DodgerBlue;
+            font-size: 30px;
+        }
+
+        p {
+            font-size: 18px;
+        }
+
+        a {
+            color: DodgerBlue;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
     <h1>Employee not found</h1>
