--- a/templates/GetEmp.html
+++ b/templates/GetEmp.html
@@ -7,8 +7,7 @@
     <font color="black" size="5" style="font-family: avenir">
         <h1 style="color: DodgerBlue">Employee Information</h1>
         <body bgcolor="lightgrey">
-        */</script>
-            {% if employee %}
+            <!--{% if employee %} --
         */</script>
                 <form method="POST" action="{{ url_for('update_emp', emp_id=emp_id) }}">
                     <div>
