--- a/templates/ConfirmUpdateEmp.html
+++ b/templates/ConfirmUpdateEmp.html
@@ -2,6 +2,35 @@
 <html>
 <head>
     <title>Update Success</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: lightgrey;
+            margin: 0;
+            padding: 20px;
+        }
+
+        h1 {
+            color: DodgerBlue;
+            text-align: center;
+            margin-top: 0;
+        }
+
+        p {
+            text-align: center;
+            font-size: 16px;
+            margin-bottom: 20px;
+        }
+
+        a {
+            color: DodgerBlue;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     <h1>Employee Information has been Updated!</h1>
